Fixed the max width of article content for better readability.

--- a/styles/article/_article.scss
+++ b/styles/article/_article.scss
@@ -54,6 +54,10 @@ article {
         margin-top: 20px;
     }
 
+    *:not(section):not(header){
+        max-width: 800px;
+    }
+
     section {
         @import './alert';
         @import './code';
